@@ -1,5 +1,14 @@
 2007-01-19  Thomas Wood  <thos@gnome.org>
 
+	* gnome-theme-details.c: (update_color_scheme_tab),
+	(gnome_theme_details_update_from_gconf):
+	* gnome-theme-manager.c: (gtk_theme_key_changed):
+	* theme-properties.glade:
+
+	Add a Revert button to the color schemes tab
+
+2007-01-19  Thomas Wood  <thos@gnome.org>
+
 	* gnome-theme-details.c: (update_color_scheme_tab), (color_select),
 	(toggle_color_scheme_key):
 	* gnome-theme-manager.c: (free_all), (load_meta_themes),
